
** CHANGED org-block face

Made =org-block= inherit from the =fixed-pitch= face so that when =variable-pitch-mode= is used for Org mode, code in code blocks are still using monospaced fonts.

* [[https://github.com/ryuslash/yoshi-theme/compare/v6.1.0...v6.2.0][6.2.0]] -- 2019-05-05
:PROPERTIES:
:CUSTOM_ID: release-6.2.0
:END:
** ADDED Colors for modes using ansi-color.el, such as Eshell

** ADDED Some package faces

   Add the package faces: =package-status-avail-obso=,
   =package-status-available=, =package-status-dependency=,
   =package-status-installed=.

** ADDED Window divider faces

   Add the Window Divider faces: =window-divider=,
   =window-divider-first-pixel= and =window-divider-last-pixel=.

** ADDED Window divider settings

   Enable =window-divider-mode= and set the
   =window-divider-default-right-width= to ~1~.

** ADDED Some js2-mode faces

   Add the JS2 Mode faces: =js2-error=, =js2-function-call=,
   =js2-object-property=, =js2-warning=.

** ADDED Some company-mode faces

   Add the Company faces: =company-preview=, =company-preview-common=,
   =company-scrollbar-bg=, =company-scrollbar-fg=, =company-tooltip=,
   =company-tooltip-annotation=, =company-tooltip-common=,
   =common-tooltip-search=, =common-tooltip-search-selecion=,
   =common-tooltip-selection=.

** ADDED Some ivy faces

   Add the Ivy faces: =ivy-current-match=,
   =ivy-minibuffer-match-face-1=, =ivy-minibuffer-match-face-2=,
   =ivy-minibuffer-match-face-3=, =ivy-minibuffer-match-face-4=.

** ADDED flycheck-inline faces

   Add the flycheck-inline faces: =flycheck-inline-error=, =flycheck-inline-info=,
   =flycheck-inline-warning=.

** ADDED highlight-indent-guides face

  Add the highlight-indent-guides face: =highlight-indent-guides-character-face=.

** CHANGED the color of high-scoring unread mails in gnus

** CHANGED the color of normal ticked mails in gnus

** CHANGED the padding around the mode-line

** CHANGED the JS2 function param face color
