@@ -70,6 +70,10 @@ I hope that these changes make the mode-line more distinctive and nicer to look 
 
 Made =org-block= inherit from the =fixed-pitch= face so that when =variable-pitch-mode= is used for Org mode, code in code blocks are still using monospaced fonts.
 
+** ADDED Some tab bar faces
+
+Add the =tab-bar=, =tab-bar-tab=, and =tab-bar-tab-inactive= faces.
+
 * [[https://github.com/ryuslash/yoshi-theme/compare/v6.1.0...v6.2.0][6.2.0]] -- 2019-05-05
 :PROPERTIES:
 :CUSTOM_ID: release-6.2.0
